--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,14 @@
 {
-    "name": "laravel/laravel",
+    "name": "josephyhu/learning-journal",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": [
-        "framework",
-        "laravel"
-    ],
+    "description": "A journal of online courses a user has taken.",
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Joseph Yhu",
+            "email": "josephsyhu@gmail.com"
+        }
+    ],
     "require": {
         "php": "^7.3|^8.0",
         "fideloper/proxy": "^4.4",
